# Kubecheck

./: .gitignore  ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  kubecheck.yaml  test.sh  uninstall.sh
.github/workflows/: release.yml
cmd/kubecheck/: config.go  engine.go  go.mod  helm.go  main.go  parser.go  reporter.go  rule-engine.go
docs/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: deployment-good.yaml  multi-doc.yaml  pod.yaml
examples/helm-chart/: Chart.yaml  values.yaml
examples/helm-chart/templates/: deployment.yaml
haskell/: cabal.project  kubecheck.cabal
haskell/app/: Main.hs
haskell/src/: Rules.hs  Types.hs  Validator.hs
