cabal-version:      3.0
name:               kubecheck-rules
version:            0.1.0.0
synopsis:           Kubernetes static analysis rule engine
description:        Pure functional rule engine for validating Kubernetes manifests
license:            MIT
author:             KubeCheck Team
maintainer:         team@kubecheck.dev
category:           DevOps
build-type:         Simple

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Werror=incomplete-patterns

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  Rules
                    , Validator
                    , Types
    build-depends:    base >=4.17 && <5
                    , aeson >=2.0 && <2.3
                    , text >=2.0 && <2.2
                    , containers >=0.6 && <0.8
                    , bytestring >=0.11 && <0.13
    default-language: Haskell2010

executable kubecheck-rules
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4.17 && <5
                    , kubecheck-rules
                    , aeson >=2.0 && <2.3
                    , bytestring >=0.11 && <0.13
    default-language: Haskell2010
